syntax="proto3";

package pb;

option go_package = "./pb";

service Test {
    rpc GetAllTests(GetAllTestsRequest) returns (stream GetTestResponse);
    rpc GetTest(GetTestRequest) returns (GetTestResponse);
    rpc PutTest(PutTestRequest) returns (PutTestResponse);
    rpc PostTest(PostTestRequest) returns (PostTestResponse);
    rpc DeleteTest(DeleteTestRequest) returns (DeleteTestResponse);
}

message GetAllTestsRequest{}

message GetTestRequest{
    string id = 1;
}
message GetTestResponse{
    string id = 1;
    string name = 2;
    string action = 3;
}

message PutTestRequest{
    string id = 1;
    string name = 2;
    string action = 3;
}
message PutTestResponse{
    string id = 1;
}

message PostTestRequest{
    string name = 1;
    string action = 2;
}
message PostTestResponse{
    string id = 1;
}

message DeleteTestRequest{
    string id = 1;
}
message DeleteTestResponse{}